2010-10-08  Robert Larice
 * src/include/inpdefs.h ,
 * src/spicelib/parser/inp.h ,
 * src/spicelib/parser/inppas2.c :
    collect the INP2?() prototypes in "inp.h"

2010-10-08  Robert Larice
 * src/include/inpptree.h ,
 * src/spicelib/parser/inp.h :
    collect the PT*() prototypes in "inp.h"

2010-10-08  Robert Larice
 * src/frontend/parse.c ,
 * src/include/fteext.h :
    consider the op_*() functions to be less public

2010-10-08  Robert Larice
 * src/spicelib/devices/bsim3soi/b4soiinit.c ,
 * src/spicelib/devices/bsim3soi_dd/b3soiddinit.c ,
 * src/spicelib/devices/bsim3soi_fd/b3soifdinit.c ,
 * src/spicelib/devices/bsim3soi_pd/b3soipdinit.c ,
 * src/spicelib/devices/dio/dioinit.c ,
 * src/spicelib/devices/hisim/hsm1init.c :
    avoid function redeclaration (devices)

2010-10-08  Robert Larice
 * src/include/sensgen.h ,
 * src/spicelib/analysis/cktsgen.c :
    sens_getp() prototype  -->  include file

2010-10-08  Robert Larice
 * src/xspice/idn/idndig.c :
    static function definition

2010-10-08  Robert Larice
 * src/include/ipcproto.h :
    #ifdef include file wrapper

2010-10-08  Robert Larice
 * src/include/noisedef.h ,
 * src/spicelib/devices/bjt/bjtnoise.c ,
 * src/spicelib/devices/bjt2/bjt2noise.c ,
 * src/spicelib/devices/bsim1/b1noi.c ,
 * src/spicelib/devices/bsim2/b2noi.c ,
 * src/spicelib/devices/bsim3/b3noi.c ,
 * src/spicelib/devices/bsim3soi/b4soinoi.c ,
 * src/spicelib/devices/bsim3soi_dd/b3soiddnoi.c ,
 * src/spicelib/devices/bsim3soi_fd/b3soifdnoi.c ,
 * src/spicelib/devices/bsim3soi_pd/b3soipdnoi.c ,
 * src/spicelib/devices/bsim3v0/b3v0noi.c ,
 * src/spicelib/devices/bsim3v1/b3v1noi.c ,
 * src/spicelib/devices/bsim3v1a/b3v1anoi.c ,
 * src/spicelib/devices/bsim3v1s/b3v1snoi.c ,
 * src/spicelib/devices/bsim3v32/b3v32noi.c ,
 * src/spicelib/devices/bsim4/b4noi.c ,
 * src/spicelib/devices/bsim4v2/b4v2noi.c ,
 * src/spicelib/devices/bsim4v3/b4v3noi.c ,
 * src/spicelib/devices/bsim4v4/b4v4noi.c ,
 * src/spicelib/devices/bsim4v5/b4v5noi.c ,